# ChangeLog for app-admin/bacula
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/bacula/ChangeLog,v 1.31 2004/06/26 15:33:50 zul Exp $

  26 Jun 2004; Chuck Short <zul@gentoo.org> bacula-1.34.4.ebuild:
  Marked stable for x86.

*bacula-1.34.4 (19 Jun 2004)

  19 Jun 2004; Chuck Short <zul@gentoo.org> bacula-1.34.4.ebuild:
  Version bump, closes #54097.

  26 Apr 2004; Jason Wever <weeve@gentoo.org> bacula-1.34.1.ebuild:
  Stable on sparc wrt bug #48969.

  26 Apr 2004; Chuck Short <zul@gentoo.org> bacula-1.34.1.ebuild:
  Marked stable for x86.

*bacula-1.34.1 (26 Apr 2004)

  26 Apr 2004; Chuck Short <zul@gentoo.org> bacula-1.34.1.ebuild:
  Version bump, closes #48969.

  26 Apr 2004; Chuck Short <zul@gentoo.org> bacula-1.34.0.ebuild:
  Removed 1.34.0 becuase of race condition.

  22 Apr 2004; Chuck Short <zul@gentoo.org> bacula-1.34.0.ebuild:
  Force mysql to be used if sqlite and mysql are both in use flags. Closes
  #47836.

  14 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> bacula-1.32f.ebuild:
  Removed S=, inherit eutils for epatch.

*bacula-1.34.0 (13 Apr 2004)

  13 Apr 2004; Chuck Short <zul@gentoo.org> bacula-1.34.0.ebuild:
  Version bump, closes #47240.

  09 Apr 2004; Chuck Short <zul@gentoo.org> bacula-1.32f-r5.ebuild:
  Marked stable on x86.

  09 Apr 2004; Chuck Short <zul@gentoo.org> bacula-1.32f.ebuild:
  Removed patch, it was not applying cleanly. Closes #46790.

  23 Mar 2004; <chuck@gentoo.org> bacula-1.32f.ebuild:
  Marked stable for x86.

  21 Mar 2004; Chuck Short <zul@gentoo.org> bacula-1.32f-r5.ebuild,
  bacula-1.32f.ebuild:
  Fixed broken static support. Closes #23998.

  16 Mar 2004; Chuck Short <zul@gentoo.org> bacula-1.32f.ebuild:
  Added ~sparc keyword

  19 Mar 2004; Chuck Short <zul@gentoo.org> bacula-1.32f-r5.ebuild:
  Fix for proper detection of sqlite. Closes #45152.

*bacula-1.32f-r5 (16 Mar 2004)

  16 Mar 2004; Chuck Short <zul@gentoo.org> bacula-1.32f-r5.ebuild,