@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/bacula
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/bacula/ChangeLog,v 1.31 2004/06/26 15:33:50 zul Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/bacula/ChangeLog,v 1.32 2004/06/26 15:36:41 zul Exp $
+
+  26 Jun 2004; Chuck Short <zul@gentoo.org> bacula-1.29.ebuild,
+  bacula-1.31.ebuild:
+  Removed old versions.
 
   26 Jun 2004; Chuck Short <zul@gentoo.org> bacula-1.34.4.ebuild:
   Marked stable for x86.
